# open-controller-workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  InitGui.py  MANIFEST.in  README.md  README.md.bak  RELEASE_NOTES_v0.1.md  ocf_kicad_plugin.py  ocw_kicad_plugin.py  pyproject.toml
.github/workflows/: release-v0.1.yml
docs/: ARCHITECTURE_FREECAD_WORKBENCH.md  README.md  architecture.md  demo_flow.md  development.md  geometry-pipeline.md  kicad-workflow.md  manual_ux_checklist.md  performance-metrics.md  plugin-installation.md  release-checklist.md  release-process.md  release_prep_v0x.md  roadmap.md  schema-v1.md  service-architecture.md  state-architecture.md  ui_visual_language.md  user-guide.md  workbench.md  workflows.md
docs/architecture/: COMPONENT_MODEL.md  PCB_INTEGRATION_MODEL.md  PLUGIN_DATA_CLEANUP.md  TEMPLATE_MODEL.md
docs/releases/: v0x_release_draft.md
docs/ui/: DOCK_REFACTOR_PLAN.md  DOCK_UI_REDESIGN_SUMMARY.md  FASTENERS_REFERENCE_ANALYSIS.md  FEATURE_IMPROVEMENT_REVIEW.md  INLINE_EDITING_MODEL.md  INTERACTION_MODEL.md  INTERACTION_REVIEW.md  OCW_DOCKLESS_WORKBENCH_PLAN.md  SNAPPING_MODEL.md  TASK_PANEL_STRATEGY.md  UI_DOCS_AUDIT.md  WORKBENCH_INTERACTION_REVIEW.md
examples/: README.md  geometry_v1.py
ocf_freecad/: workbench.py
ocf_kicad/: board.py  loader.py  placer.py  plugin.py  utils.py
ocw_kicad/: __init__.py  board.py  footprint_resolver.py  keepout_renderer.py  loader.py  placer.py  plugin.py  utils.py
ocw_workbench/: init_app.py  init_gui.py  workbench.py
screenshots/: README.md
scripts/: run_quality_smoke.py  run_smoke_tests.py
(+377 files in other folders)
